<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bckgt"
    android:orientation="vertical"
    tools:context=".ui.NewMusicActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#90000000"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/new_music"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#90000000"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_music"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/default_album_300_g4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edit_album"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/album"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/year"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/edit_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/genre"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/edit_sample_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/sample_song_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />

    <Button
        android:id="@+id/button_select_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/red_album"
        android:text="@string/select_mp3_song"
        android:textColor="@color/white" />

    <EditText
        android:id="@+id/edit_sample_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="Sample Song"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:visibility="invisible" />

    <EditText
        android:id="@+id/edit_info_album"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="start|top"
        android:hint="@string/album_infos"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark_yellow"
            android:text="@string/save"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/red_album"
            android:text="@string/cancel"
            android:textColor="@color/white" />


    </LinearLayout>

</LinearLayout>