<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/unknown" />

    <TextView
        android:id="@+id/text_logo_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="-10dp"
        android:background="#90000000"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:padding="8dp"
        android:text="RockStore"
        android:textColor="@color/red_album"
        android:textSize="30dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="20dp"
        android:background="#90000000"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_person_24"
            android:gravity="center"
            android:hint="@string/username"
            android:text="admin"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/baseline_lock_24"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="password"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <CheckBox
            android:id="@+id/checkbox_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_logged"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/red_album"
            android:elevation="30dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_signUp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="158dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/recover_password"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/text_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:text="@string/do_not_have_an_account_yet_sign_up"
        android:textColor="@color/red_album" />


</RelativeLayout>