<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/pale_black"
        android:elevation="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_music"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/patti_smith_horses" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_music_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="start|center_vertical"
                android:text="@string/artist"
                android:textColor="@color/red_album"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_music_album"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="start|center_vertical"
                android:text="Album"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/text_music_year"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="10dp"
                android:gravity="start|center_vertical"
                android:text="Year"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/grey_silver"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.70"
            android:orientation="vertical"
            android:paddingStart="10dp">

            <TextView
                android:id="@+id/text_single"
                android:layout_width="wrap_content"
                android:textColor="@color/red_album"
                android:layout_height="wrap_content"
                android:text="@string/featured_track" />

            <TextView
                android:id="@+id/text_sample_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/pale_black"
                android:text="@string/example_song_from_the_album"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:gravity="center_vertical|end"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/img_play"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:elevation="20dp"
                android:src="@drawable/baseline_play_circle_filled_16" />

            <ImageView
                android:id="@+id/img_stop"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:elevation="20dp"
                android:src="@drawable/baseline_stop_circle_16" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>

